# expenses-accounting

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
expense_accounting/: constants.py  data_models.py  exceptions.py  utils.py
expense_accounting/data_loaders/: __init__.py  data_loader_csv.py
expense_accounting/data_models/: __init__.py  core.py  reports.py
expense_accounting/data_processors/: __init__.py  data_aggregator_basic.py  data_converter.py
expense_accounting/renders/: __init__.py  graph_render.py
