[project]
name = "money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "pandas-stubs==3.0.0.260204",
    "pydantic==2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.15.0",
]

[tool.ruff]
extend-exclude = [
    ".venv",
    "__pycache__"
]
include = [
    "*.py",
    "*.pyi"
]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # Add Isort rules

[tool.ruff.lint.isort]
lines-after-imports = 2
split-on-trailing-comma = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true
